feat: add first_name and last_name to user type in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,8 @@ const users = await fetch(`${apiUrl}/users`)
                         (u: {
                             clerk_id: string;
                             name: string;
+                            first_name: string;
+                            last_name: string;
                             email: string;
                             username: string;
                             role: string;
